2005-09-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* configure.in: added 'vi' to ALL_LINGUAS

2005-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* src/Dialog_Filesystems.cc: fixed a11y thingy (#316108)
	* include/GParted_Core.h,
	  src/GParted_Core.cc,
	  include/Dialog_Disklabel.h,
	  src/Dialog_Disklabel.cc,
	  src/Win_GParted.cc : get labeltypes from libparted instead of hardcoding them,
	  also changed some text (#315979)

2005-09-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* lots of stuff and cleanups, including fixing getting used/unused space of hfs/hfs+/fat16/fat32
	* also fixes bug #161362
	
2005-08-31 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Dialog_Filesystems.cc: at startup closebutton is focused (#308381)

2005-08-31 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Dialog_Progress.cc: fixed bug with big fonts (#301831)

2005-08-30 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: fixed typo (#312661)

2005-08-30 Bart Hakvoort  <hakvoort@cvs.gnome.org>

	* compose/ucompose.hpp: quick 'fix' for crashers in some locales (#157871)
	* include/Utils.h: basicly the same + minor cleanups
	* src/GParted_Core.cc: replaced C-style cast with static_cast..

2005-07-31  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added 'fi' to ALL_LINGUAS.

2005-06-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-05-02  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" (Traditional Chinese) to ALL_LINGUAS.

2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-22  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Add "lt" (Lithuanian) to ALL_LINGUAS.

2005-02-28  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-02-26  Kostas Papadimas  <pkst@gnome.org>

	* configure.in: Added "el" (Greek) to ALL_LINGUAS.

2005-02-19  Christophe Merlet  <redfox@redfoxcenter.org>
