@@ -45,6 +45,7 @@ AC_SUBST(GTKMM_CFLAGS)
 
 AC_OUTPUT([
 Makefile
+compose/Makefile
 include/Makefile
 src/Makefile
 po/Makefile.in
