@@ -1,1 +1,36 @@
 gparted_includedir = $(pkgincludedir)
+
+EXTRA_DIST = \
+	Device.h \
+	Dialog_Partition_Copy.h\
+	ext2.h\
+        Frame_Resizer_Base.h\
+	i18n.h\
+        Partition.h  \
+	VBox_VisualDisk.h \
+	Dialog_About.h   \
+        Dialog_Partition_Info.h\
+	ext3.h  \
+	Frame_Resizer_Extended.h\
+	jfs.h \
+	reiser4.h   \
+	Win_GParted.h \
+	Dialog_Base_Partition.h\
+	Dialog_Partition_New.h    \
+	fat16.h    \
+	GParted_Core.h    \
+        linux_swap.h \
+	reiserfs.h  \
+	xfs.h \
+	Dialog_Disklabel.h \
+	Dialog_Partition_Resize_Move.h \
+	fat32.h  \
+	hfs.h  \
+	ntfs.h  \
+	TreeView_Detail.h \
+	Dialog_Filesystems.h \
+	Dialog_Progress.h  \
+	FileSystem.h  \
+	hfsplus.h \
+	Operation.h \
+	Utils.h
