@@ -1,3 +1,11 @@
+2005-10-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	* removed INSTALL
+	* compose/.cvsignore,
+	   compose/Makefile.am,
+	   Makefile.am,
+	   configure.in,
+	   include/Makefile.am: some fixes to make 'make dist' work (thanks to Daniel Holbach)
+	   
 2005-09-21 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	* configure.in: added 'vi' to ALL_LINGUAS
 
